# my_annotation_tools

./: .gitignore  add_class_names_to_desktop_sa_json.py  blend_dataset.py  classes_priority.txt  colorize_labeled_images.py  concatenate_sa_annotation_zip.py  convert_sa_coco_mask.py  convert_sa_mask_to_coco_mask.py  convert_sa_project_to_coco_data.py  copy_image_for_web_sa.py  darknet2sa.py  desktop_sa_to_coco_detection.py  duplicate_image_removal_with_ssim.py  extract_complementary_images.py  extract_completed_annotation_data_and_images.py  extract_tied_image_and_annotation.py  extract_tied_image_and_annpng.py  generate_binary_mask_to_01_mask.py  generate_coco_mask.py  generate_colorized_mask.py  generate_train_val_txt.py  generate_train_var_txt.py  generate_undistortion_images.py  image_extraction.py  image_extraction_P3.py  image_extraction_from_white_list.py  image_extraction_rgb.py  image_resizing.py  image_selection_gui.py  jpg2mp4.py  modify_object_detection_class_id_on_sa_annotation_file.py  overpaint_label.py  png2jpg.py  png2jpg_learning_txt_fille.py  png2mp4.py  pyproject.toml  remove_bbox_from_sa_json.py  rename_annotation_files_desktop_sa.py  requirements.txt  resize_images.py  (+3 more)
cfg/: classes.json  classes_priority.txt  classes_tmp.json
deprecated/: add_class_id_each_json.py  copy_image_for_web_sa.py
json/: classes.json  classes_mapper.json  evt_2020-10-28_01-52-43_DUALZENSE_L_rgb.png___objects.json  takaune_train.json
scripts/: annotation.py  camera_parameter.py  category.py  ssim.py  utils.py
