[tool.poetry]
name = "my_annotation_utils"
version = "0.1.0"
description = ""
authors = ["yuki-inaho <yoshikawa@inaho.co>"]

[tool.poetry.dependencies]
python = "3.6.10"
numpy = "1.19.4"
opencv-python = "4.4.0.46"
toml = "0.10.2"
pydensecrf = "^1.0rc3"
scikit-image = "^0.17.2"
click = "^7.1.2"
tqdm = "^4.51.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
